--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <div id="settingsPopUp">
         <div id="closePopUpContainer">
-            <div id="addLayerIcon">Add Layer</div>
+            <div id="addBackLayerIcon">Add Back Layer</div>
+            <div id="addFrontLayerIcon">Add Front Layer</div>
             <div id="closePopUpIcon">&times;</div>
         </div>
         <div id="settingsPopUpContentContainer"></div>
@@ -41,7 +42,8 @@
                 </div>
                 <div class="customizeDiv">
                     Max radius:
-                    <input id="starMaxRadiusSetting" type="number" min="0.1" max="500" value="100" placeholder="0.1-500">
+                    <input id="starMaxRadiusSetting" type="number" min="0.1" max="500" value="100"
+                        placeholder="0.1-500">
                 </div>
                 <div class="customizeDiv">
                     Moving speed:
