--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body id="body">
     <canvas id="space"></canvas>
 
     <div id="settings">
@@ -22,6 +22,9 @@
             <div id="addBackLayerIcon">Add Back Layer</div>
             <div id="addFrontLayerIcon">Add Front Layer</div>
             <div id="closePopUpIcon">&times;</div>
+        </div>
+        <div class="changeBGcolor">
+          Background Color <input type="color" value="#000000" id="changeBGcolor">
         </div>
         <div id="settingsPopUpContentContainer"></div>
     </div>
